--- a/PlatformIO/HgMJK_Turntable/platformio.ini
+++ b/PlatformIO/HgMJK_Turntable/platformio.ini
@@ -8,8 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+;[env:uno]
+;platform = atmelavr
+;board = uno
+;framework = arduino
+;lib_deps = waspinator/AccelStepper@^1.64
+
+
+[env:nano]
 platform = atmelavr
-board = uno
+board = nanoatmega328
 framework = arduino
 lib_deps = waspinator/AccelStepper@^1.64
