--- a/PlatformIO/HgMJK_Turntable/platformio.ini
+++ b/PlatformIO/HgMJK_Turntable/platformio.ini
@@ -15,8 +15,8 @@
 ;lib_deps = waspinator/AccelStepper@^1.64
 
 
-[env:nano]
+[env:nanoatmega328new]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 lib_deps = waspinator/AccelStepper@^1.64
