file update - KiCAD, PlatformIO
kiCAD auto backup, PlatformIO.ini edit: NANO non new bootloader

--- a/PlatformIO/HgMJK_Turntable/platformio.ini
+++ b/PlatformIO/HgMJK_Turntable/platformio.ini
@@ -15,8 +15,8 @@
 ;lib_deps = waspinator/AccelStepper@^1.64
 
 
-[env:nanoatmega328new]
+[env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega328new
+board = nanoatmega328
 framework = arduino
 lib_deps = waspinator/AccelStepper@^1.64
